# SPINe

./: .gitignore  README.md  config.yaml  cv-spine-architecture.html  pyproject.toml  run.sh
products/vibecheck/: adapter.py
products/vibecheck/config/: venues.yaml
products/vibecheck/dashboard/: app.py  index.html
spine/: __init__.py  main.py
spine/core/: adapter.py  config.py  event_bus.py  events.py  orchestrator.py
spine/infra/: docker-compose.yml
spine/modules/detection/: detector.py  tracker.py
spine/modules/entry_exit/: counter.py  direction.py  gate_detector.py  line_crossing.py
spine/modules/face/: demographics.py  detector.py  liveness.py  recognizer.py
spine/modules/pose/: activity.py  estimator.py
spine/modules/reid/: embedder.py  gallery.py
spine/modules/roi/: heatmap.py  homography.py  spatial_recommend.py  zone_manager.py
spine/tests/: test_dedup.py  test_events.py  test_line_crossing.py  test_zones.py
spine/utils/: anonymizer.py  frame_dedup.py  frame_grabber.py  gpu_scheduler.py  health.py  metrics.py  model_registry.py
